--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <script>
         let students = [];
-        const names = ["孟思", "孙思慧", "黄钰柯", "余紫萱", "徐梓桐", "舒文佳", "乐语彤", "万里", "黄钰琪", "阮文浩", "陈诗雨", "付思彤"];
+        const names = ["张明泽", "孙思慧", "黄钰柯", "余紫萱", "徐梓桐", "舒文佳", "万里", "黄钰琪", "阮文浩", "陈诗雨", "付思彤"];
 
         function loadData() {
             let storedData = localStorage.getItem("studentData");
